Adds users methods.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <com.erhn.ftknft.storyview.storyview.StoryProgressView
+        android:id="@+id/spv"
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:layout_gravity="center"
